<resources>
    <string name="app_name">GroundStation</string>
    <string name="gongnengshezhi">功能设置</string>
    <string name="servo_check">伺服检查</string>
    <string name="shexiangjiset">摄像机设置</string>
    <string name="external_loads">任务载荷</string>
    <string name="map_set">地图设置</string>
    <string name="playback">回放设置</string>
    <string name="setting">设置</string>
    <string name="back">返回</string>
    <string name="airborne_camera_set">机载摄像机设置</string>
    <string name="telecamera_set">摄像设置</string>
    <string name="takephoto_set">拍照设置</string>
    <string name="telecamera_self_set">摄像机本机设置</string>
    <string name="image_rp">图像分辨率</string>
    <string name="image_size">图像尺寸</string>
    <string name="cycle_cover">循环覆盖</string>
    <string name="task_load_set">任务载荷设置</string>
    <string name="saving_set">救生设置</string>
    <string name="searchlight_set">探照灯设置</string>
    <string name="launch_point_A">投放点A</string>
    <string name="launch_point_B">投放点B</string>
    <string name="launch_point_C">投放点C</string>
    <string name="launch_point_D">投放点D</string>
    <string name="select_all">全选</string>
    <string name="launch">投放</string>
    <string name="open">开启探照灯界面</string>
    <string name="close">关闭探照灯界面</string>
    <string name="ensure">确定</string>
    <string name="hangdian">航点设置</string>
    <string name="hangxian">航线设置</string>
    <string name="self_fly">自主飞行控制</string>
    <string name="fangxing">方形航线模式</string>
    <string name="sanjiaoxing">三角形航线模式</string>
    <string name="hangdianmoshi">航点模式</string>
    <string name="yuanxing">圆形航线模式</string>
    <string name="special">特殊航线模式</string>
    <string name="navigation_light_switch">导航灯控制开关</string>
    <string name="language_set">语言设置</string>
    <string name="course_set">设定航向</string>
    <string name="comunication_config">配置内置通信</string>
    <string name="visual_navigation">视觉导航模式</string>
    <string name="open_navigation_light_switch">开启导航灯</string>
    <string name="close_navigation_light_switch">关闭导航灯</string>
    <string name="chinese">简体</string>
    <string name="english">ENG</string>
    <string name="serial_port">串口：</string>
    <string name="baud_rate">波特率：</string>
    <string name="data_bits">数据位：</string>
    <string name="check_bit">校验位：</string>
    <string name="stop_bit">停止位：</string>
    <string name="car">汽车</string>
    <string name="people">人</string>
    <string name="building">建筑</string>
    <string name="track_monitor">跟踪/监控</string>
    <string name="format">格式化</string>
    <string name="resume_default">恢复出厂设置</string>
    <string name="time_set">时间设定</string>
    <string name="software_edition_message">软件版本信息</string>
    <string name="format_yes_no">是否格式化</string>
    <string name="format_yse">是</string>
    <string name="format_no">否</string>
    <string name="resume_default__yes_no">是否恢复出厂设置</string>
    <string name="resume_default__yes">是</string>
    <string name="resume_default__no">否</string>
    <string name="save">保存</string>
    <string name="format_finished">格式化已完成</string>
    <string name="resuming_default">正在恢复出厂...</string>
    <string name="formating">正在格式化...</string>
    <string name="resume_default_finished">已恢复出厂设置</string>

</resources>
