<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_marginLeft="31dp"
    android:layout_marginTop="31dp"
    android:gravity="center"
    android:textColor="#f7f7f7"
    android:textSize="32sp"
    android:text="@string/hangxian"/>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="6"
    android:layout_gravity="center"
    android:orientation="vertical">
    <Button
        android:id="@+id/fangxing"
        android:layout_width="450dp"
        android:layout_height="41dp"
        android:layout_centerInParent="true"
        android:background="@drawable/airroute_bg"
        android:gravity="center"
        android:textColor="#f7f7f7"
        android:textSize="22dp"
        android:text="@string/fangxing"/>
    <Button
        android:id="@+id/yuanxing"
        android:layout_width="450dp"
        android:layout_height="41dp"
        android:layout_centerInParent="true"
        android:background="@drawable/airroute_bg"
        android:layout_below="@id/fangxing"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="#f7f7f7"
        android:textSize="22dp"
        android:text="@string/yuanxing"/>
    <Button
        android:id="@+id/sanjiaoxing"
        android:layout_width="450dp"
        android:layout_height="41dp"
        android:layout_centerInParent="true"
        android:background="@drawable/airroute_bg"
        android:layout_above="@id/fangxing"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textColor="#f7f7f7"
        android:textSize="22dp"
        android:text="@string/sanjiaoxing"/>
    <Button
        android:id="@+id/special"
        android:layout_width="450dp"
        android:layout_height="41dp"
        android:layout_centerInParent="true"
        android:background="@drawable/airroute_bg"
        android:layout_below="@id/yuanxing"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="#f7f7f7"
        android:textSize="22dp"
        android:text="@string/special"/>
    <Button
        android:id="@+id/hangdianmode"
        android:layout_width="450dp"
        android:layout_height="41dp"
        android:layout_centerInParent="true"
        android:background="@drawable/airroute_bg"
        android:layout_above="@id/sanjiaoxing"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textColor="#f7f7f7"
        android:textSize="22dp"
        android:text="@string/hangdianmoshi"/>
</RelativeLayout>
<Button
    android:id="@+id/back"
    android:layout_width="60dp"
    android:layout_height="30dp"
    android:background="@drawable/button_bg"
    android:layout_weight="1"
    android:layout_gravity="bottom|right"
    android:layout_marginRight="30dp"
    android:layout_marginBottom="30dp"
    android:textColor="#f7f7f7"
    android:textSize="22sp"
    android:gravity="center"
    android:text="@string/back"/>
</LinearLayout>
