<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    android:background="@drawable/bg">
    
 <!-- 提示信息 -->   
    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="30dp"
         android:layout_gravity="top"
         android:textColor="#F7F7F7"
         android:textSize="32sp"
         android:text="@string/comunication_config"/>
 <!-- 设置 --> 
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"    
    android:layout_weight="2"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">  
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"> 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:textColor="#F7F7F7"
         android:textSize="24sp"
         android:text="@string/serial_port"/>
  <Spinner
    android:id="@+id/serialport"
    android:layout_width="145dp"
    android:layout_height="40dp"
    style="@style/spinner_style"
    android:entries="@array/spingarr"/>
 </LinearLayout> 
    <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="30dp"
     android:orientation="horizontal"> 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#F7F7F7"
         android:textSize="24sp"
         android:text="@string/baud_rate"/>
  <Spinner
      android:id="@+id/baudrate"
      android:layout_width="145dp"
      android:layout_height="40dp"
      style="@style/spinner_style"
      android:entries="@array/spingarr"/>
    </LinearLayout>
    <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="30dp"
     android:orientation="horizontal"> 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#F7F7F7"
         android:textSize="24sp"
         android:text="@string/data_bits"/>
  <Spinner
      android:id="@+id/databit"
      android:layout_width="145dp"
      android:layout_height="40dp"
      style="@style/spinner_style"
      android:entries="@array/spingarr"/>
    </LinearLayout>
    <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="30dp"
     android:orientation="horizontal"> 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#F7F7F7"
         android:textSize="24sp"
         android:text="@string/check_bit"/>
  <Spinner
      android:id="@+id/checkbit"
      android:layout_width="145dp"
      android:layout_height="40dp"
      style="@style/spinner_style"
      android:entries="@array/spingarr"/>
    </LinearLayout>
    <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="30dp"
     android:orientation="horizontal"> 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#F7F7F7"
         android:textSize="24sp"
         android:text="@string/stop_bit"/>
  <Spinner
      android:id="@+id/stopbit"
      android:layout_width="145dp"
      android:layout_height="40dp"
      style="@style/spinner_style"
      android:entries="@array/spingarr"/>
    </LinearLayout>    
</LinearLayout>

 <!--确定或取消  --> 
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_marginRight="30dp"
    android:layout_marginBottom="30dp"
    android:layout_gravity="bottom">  
    <Button
        android:id="@+id/ensure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:textColor="#F7F7F7"
        android:textSize="22sp"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/ensure"/>
    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:textColor="#F7F7F7"
        android:textSize="22sp"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginLeft="23dp"
        android:text="@string/back"/>
</LinearLayout>

</LinearLayout>
