<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >
<LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:layout_marginTop="150dp"
    android:layout_marginBottom="100dp"
    android:orientation="vertical" >
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:textColor="#F7F7F7"
       android:textSize="40sp"
       android:text="@string/format_yes_no"/>
  <LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:orientation="horizontal">
   <Button
       android:id="@+id/formating"
       android:layout_width="77dp"
       android:layout_height="45dp"
       android:background="@drawable/button_bg"
       android:gravity="center"
       android:textColor="#F7F7F7"
       android:textSize="20sp"
       android:text="@string/format_yse"/>
   <Button
       android:id="@+id/unformat"
       android:layout_width="77dp"
       android:layout_height="45dp"
       android:background="@drawable/button_bg"
       android:gravity="center"
       android:textColor="#F7F7F7"
       android:textSize="20sp"
       android:layout_marginLeft="140dp"
       android:text="@string/format_no"/>
  </LinearLayout>

</LinearLayout>

</LinearLayout>
