<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/bg">
   <TextView
       android:id="@+id/t1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:layout_alignParentLeft="true"
       android:layout_alignParentTop="true"
       android:layout_marginLeft="20dp"
       android:layout_marginTop="20dp"
       android:textSize="32sp"
       android:textColor="#F7F7F7"
       android:text="@string/navigation_light_switch"/>
       <!--  添加选项-->      
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="horizontal">
    <!--  开-->      
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical">
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="2sp"
      android:textColor="#F7F7F7"
      android:textSize="30sp"
      android:text="@string/open_navigation_light_switch"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="60dp"
          android:padding="2sp"
          android:textColor="#F7F7F7"
          android:textSize="30sp"
          android:text="@string/close_navigation_light_switch"/>

  </LinearLayout>
  <!--  关-->      
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
      android:layout_marginTop="22dp"
    android:layout_marginLeft="100dp"
    android:orientation="vertical">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
      <RadioButton
          android:id="@+id/open_navigation_light_switch"
          android:layout_width="30dp"
          android:layout_height="30dp"
          android:button="@null"
          android:checked="true"
          android:background="@drawable/light_button_bg"/>
      <RadioButton
      android:id="@+id/close_navigation_light_switch"
      android:layout_width="30dp"
      android:layout_height="30dp"
          android:layout_marginTop="64dp"
          android:button="@null"
          android:background="@drawable/light_button_bg"/>
  </RadioGroup>
  </LinearLayout>
  </LinearLayout>   
 <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_alignParentBottom="true"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="30dp"
    android:orientation="horizontal">
    <Button
       android:id="@+id/ensure"
       android:layout_width="66dp"
       android:layout_height="42dp"
       android:background="@drawable/button_bg"
       android:textSize="24sp"
       android:textColor="#F7F7F7"
       android:layout_marginLeft="5dp"
       android:text="@string/ensure"/>
    <Button
       android:id="@+id/back"
       android:layout_width="66dp"
       android:layout_height="42dp"
       android:background="@drawable/button_bg"
       android:textSize="24sp"
       android:textColor="#F7F7F7"
       android:layout_marginLeft="25dp"
       android:layout_marginRight="30dp"
       android:text="@string/back"/>
  </LinearLayout>            
</RelativeLayout>
